--- a/acube/package.json
+++ b/acube/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
